fix: added button mobile size

--- a/packages/cfd/src/Containers/mt5-create-password/mt5-create-password.scss
+++ b/packages/cfd/src/Containers/mt5-create-password/mt5-create-password.scss
@@ -3,13 +3,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // max-width: 4.24rem;
-    gap: 2rem;
-
-    @include mobile-or-tablet-screen {
-        width: 100%;
-        height: 100%;
-    }
 
     form {
         flex-grow: 1;
@@ -21,6 +14,7 @@
 
         @include mobile-or-tablet-screen {
             padding: 0;
+            height: 100%;
         }
     }
     &__description {
@@ -65,12 +59,14 @@
         margin: auto;
 
         @include mobile-or-tablet-screen {
-            width: calc(100vw - 4.8rem);
-            max-width: 30rem;
+            // width: calc(100vw - 4.8rem);
+            // max-width: 30rem;
+            width: 100%;
+            max-width: 100%;
         }
     }
     & .mt5-password-field {
-        margin-bottom: 1em;
+        margin-bottom: 1rem;
         width: 80%;
     }
     .input-element {
@@ -82,8 +78,9 @@
             overflow-y: auto;
             overflow-x: hidden;
             height: 100%;
+            width: 100%;
             max-height: calc(100vh - 6.4rem);
-            padding: 1rem;
+            padding: 4rem 1.6rem 1.6rem;
         }
     }
     @include tablet-up {
@@ -92,11 +89,38 @@
             flex-direction: column;
             width: 100%;
             margin-bottom: 2rem;
-
-            &--password-reset {
-                padding: 0 2.5rem;
-            }
         }
+    }
+}
+.dc-mobile-dialog__mt5-email-sent {
+    padding-bottom: 1rem;
+}
+.dc-modal__container_top-up-virtual {
+    width: 384px;
+    min-height: 367px;
+    display: flex;
+    flex-direction: column;
+
+    &__body {
+        display: flex;
+        flex-direction: column;
+        padding: 4.8rem 4.2rem;
+        flex-grow: 1;
+        justify-content: space-around;
+        align-items: center;
+    }
+    &__description {
+        text-transform: none;
+    }
+    &--h4 {
+        @include typeface(--small-center-bold-black);
+        text-transform: none;
+        color: var(--text-prominent);
+    }
+    &--balance {
+        @include typeface(--title-center-bold-black);
+        line-height: 1.5;
+        color: var(--text-profit-success);
     }
 }
 
@@ -116,20 +140,33 @@
         margin: auto;
         line-height: 1.43;
     }
-    &__radio {
-        &.dc-radio-group {
-            display: grid;
-            grid-gap: 2rem;
-            margin-top: 0;
-            padding-bottom: 2.4rem;
-        }
-        &.dc-radio-group__item {
-            display: flex;
-            flex-direction: row;
-        }
-    }
     &__create-password {
         padding: 0 1.2rem;
+        @include mobile-or-tablet-screen {
+            &-body {
+                height: 100%;
+            }
+        }
+        // @include mobile-or-tablet-screen {
+
+        //  &-body{ width: 100%;
+        //     overflow-x: hidden;
+        //     overflow-y: auto;
+        //     .dc-modal-footer {
+        //         position: fixed;
+        //         bottom: 4rem;
+        //         width: 100%;
+        //         background: var(--general-main-1);
+
+        //         .dc-btn {
+        //             width: 100%;
+        //         }
+        //     }
+        //     .dc-form-submit-button--absolute {
+        //         position: absolute;
+        //     }
+        // }
+        // }
 
         &-content {
             display: flex;
@@ -139,7 +176,10 @@
             align-items: center;
             margin-top: auto;
             padding-bottom: 1rem;
-
+            // @include mobile-or-tablet-screen {
+            //     height: 100%;
+            //     padding: 4rem 1.6rem 1.6rem;
+            // }
             .dc-icon {
                 margin-left: 1.1rem;
                 flex: none;
@@ -154,7 +194,28 @@
             margin-bottom: 1.6rem;
         }
     }
+    &__change-password-confirmation {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        max-width: 30rem;
 
+        @include desktop-screen {
+            margin-top: -2.5rem;
+        }
+
+        &-wrapper {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+        .dc-form-submit-button {
+            margin-bottom: 2.2rem;
+            @include mobile-or-tablet-screen {
+                width: 100%;
+            }
+        }
+    }
     &-tnc {
         margin-block-end: 3.2rem;
         &--bottom {
@@ -195,6 +256,105 @@
     &__checkbox {
         .dc-icon {
             margin-inline-start: 0;
+        }
+    }
+}
+
+// .mt5-migration-modal__mobile-container {
+
+//     width: 100%;
+//     overflow-x: hidden;
+//     overflow-y: auto;
+//     .dc-modal-footer {
+//         position: fixed;
+//         bottom: 4rem;
+//         width: 100%;
+//         background: var(--general-main-1);
+
+//         .dc-btn {
+//             width: 100%;
+//         }
+//     }
+//     .dc-form-submit-button--absolute {
+//         position: absolute;
+//     }
+// }
+
+// .dc-mobile-dialog__mt5-migration-modal {
+//     overflow-x: hidden;
+//     overflow-y: auto;
+//     .dc-modal-footer {
+//         position: fixed;
+//         bottom: 0;
+//         width: 100%;
+//     }
+// }
+
+.mt5-password-submit-button {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    align-self: flex-end;
+    background-color: transparent;
+
+    @include mobile-or-tablet-screen {
+        width: 100%;
+    }
+    &:only-child {
+        width: 100%;
+    }
+    .dc-btn {
+        margin: 0 0.8rem;
+
+        &:first-child {
+            margin-left: 0;
+        }
+        &:last-child {
+            margin: 0;
+        }
+
+        @include mobile-or-tablet-screen {
+            width: 100%;
+        }
+    }
+    &--absolute {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        padding: 1.6rem;
+        width: 100%;
+        background-color: var(--general-main-1);
+        border-top: 1px solid var(--general-section-1);
+    }
+    &--center {
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+
+        & .btn {
+            min-width: 9rem;
+        }
+    }
+    &--error {
+        text-transform: none;
+    }
+    @include mobile-or-tablet-screen {
+        &--absolute {
+            top: unset;
+            bottom: 0;
+            left: 0;
+            position: fixed;
+            padding: 1.6rem;
+            border-top: 2px solid var(--general-disabled);
+            max-height: 70px;
+            width: 100%;
+            justify-content: center;
+
+            .dc-btn {
+                height: 40px;
+                width: 100%;
+                max-width: 30rem;
+            }
         }
     }
 }
